@@ -1,15 +1,15 @@
-Source:  {$source}
-Priority:optional
-Section:	{$section}
+Source: {$source}
+Priority: optional
+Section: {$section}
 Maintainer: {$author}
 Standards-Version: {$standards_version}
 Build-Depends: {$build_depends}
 Rules-Requires-Root: no
-Homepage: https://lintian.debian.org/
+Homepage: http://insecure.example.com/
 
 Package: {$source}
 Architecture: {$architecture}
-Depends: $\{misc:Depends\}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
